2013-02-07  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/amdump_client.pl: Pass the -o arguments to amservice.

2013-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amraw.pl: Check return value of POSIX::open.

2013-01-24  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Do not use a default DB.

2013-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Installcheck/Dumpcache.pm: Fix for exit status of
	  amdump.

2013-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.pl: Exit with the ored value of the exit code of
	  all subprocess.

2013-01-21  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amraw.pl: Correctly parse the --directory argument.

2013-01-15  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.h: Add all S3 error.
	* perl/Amanda/ScanInventory.pm: Set err.

2013-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.pl: Add a verify subcommand.
	* man/xml-source/amtape.8.xml: Document the verify subcommand.
	* perl/Amanda/Changer.pm: Add default verify method.
	* perl/Amanda/Changer/robot.pm (verify): Verify the drive and device
	  matches.
	* perl/Amanda/Device.pod: Typo.

2013-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add CONF_REPORT_FORMAT.
	* common-src/conffile.h: Add CNF_REPORT_FORMAT.
	* man/xml-source/amanda.conf.5.xml: Document report-foramt.
	* man/xml-source/amreport.8.xml: Document new --format argument.
	* perl/Amanda/Config.swg: Add CNF_REPORT_FORMAT.
	* perl/Amanda/Report.pm (xml_output): Remove function.
	* perl/Amanda/Report/human.pm: change api
	* perl/Amanda/Report/json.pm: New report format.
	* perl/Amanda/Report/json_raw.pm: New report format.
	* perl/Amanda/Report/xml.pm: Change api
	* perl/Makefile.am (AmandaReport_DATA): Add Amanda/Report/json.pm and
	  Amanda/Report/json_raw.pm
	* server-src/amreport.pl: New --format argument, change API to call
	  module.